--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPEhtml>
+<!DOCTYPE html>
 
-<html lang="pt">
+<html lang="pt-br">
 
-<cabeça>
+<head>
 
    <meta charset="UTF-8">
 
@@ -14,7 +14,7 @@
 
 </head>
 
-<corpo>
+<body>
 
    <div class="instagram-wrapper">
 
