--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 
        <div class="instagram-iphone">
 
-           <img src="./img/instagram-celular.png" alt="celular">
+           <img src="./Page-Instagram/img/instagram-celular.png" alt="celular">
 
        </div>
 
        <div class="instagram-continue">
 
-           <div class="grupo">
+           <div class="group">
 
-               <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
+               <img src="./Page-Instagram/img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
 
                <div class="foto-perfil">
 
-                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
+                    <img src="./Page-Instagram/img/perfil-instagram.jpg" alt="foto de perfil">
 
                </div>
 
@@ -42,11 +42,11 @@
 
            </div>
 
-           <div class="grupo">
+           <div class="group">
 
                <p class="not-account">Não é moiseslemosz?</p>
 
-               <p class="não-conta">
+               <p class="not-account">
 
                    <a href="https://www.instagram.com/accounts/login/" class="link-blue">Alterar contas</a>
 
@@ -62,7 +62,7 @@
 
                 <p class="get-app">Baixe o aplicativo</p>
 
-                <div class="baixar">
+                <div class="download">
 
                     <a href="https://apps.apple.com/br/app/instagram/id389801252" target="_blank" class="app-download"></a>
 
